Fix testimonial spacing

--- a/src/postcss/blocks/testimonials.css
+++ b/src/postcss/blocks/testimonials.css
@@ -456,10 +456,6 @@
 }
 
 .testimonials--preset-5 {
-  @media (--s) {
-    padding-bottom: 0;
-  }
-
   & .testimonials__main {
     margin-top: 0;
 
